# mk

./: .env.example  .gitignore  .replit  README.md  app.config.ts  design_guidelines.md  metro.config.js  package-lock.json  package.json  pyproject.toml  replit.md  smoke_test.py  start-avatar.sh  test_fresh_browser.py  test_redesign.py  test_welcome_clean.py  test_welcome_screen.py  test_welcome_v2.py
attached_assets/: PRD_-_Mien_Movie_1766621744881.txt  PRD_-_Support_Tickets_-_client_1766524478296.txt  PRD__Subscription_&_Credit_Management_System_Role_1766460090354.txt  Pasted-2026-02-04-16-21-33-29-c69085ac-User-table-undefined-20_1770251008020.txt  Pasted-2026-02-04-16-21-46-10-c69085ac-User-GET-api-auth-confi_1770250953734.txt  Pasted-Deployment-Source-Log-2025-12-31-10-39-52-25-a2b9cfce-U_1767208251456.txt  Pasted-Feature-Request-Three-Tears-Ecosystem-Integration-Role-_1766437812762.txt  Pasted-Feature-Request-Three-Tears-Ecosystem-Integration-Role-_1766437894317.txt  Pasted-Generate-a-16-9-widescreen-cinematic-image-Transform-th_1766706574229.txt  Pasted-Generate-a-16-9-widescreen-cinematic-image-Transform-th_1766707193346.txt  Pasted-Generate-a-16-9-widescreen-cinematic-image-Transform-th_1766709314262.txt  Pasted-Starting-Mien-Movie-Star-generation-Step-1-Generating-M_1766703693554.txt  Pasted-assets-1-GET-https-mienkingdom-com-assets-unstable-path_1766600334059.txt  Pasted-he-error-is-happening-because-you-are-sending-a-Video-f_1766710343864.txt  Prompts_-_Tiktok_1766712650884.txt  prd-client-registery_1766437901784.txt  test_google_project_(1)_1766691549282.txt  (+1 more)
(+153 files in other folders)
