[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.3.10",
    "livekit-plugins-google>=1.3.10",
    "livekit-plugins-simli>=1.3.10",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
]
